--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,54 @@
-body { margin: 0; }
+body {
+    margin: 0;
+    overflow: hidden;
+    user-select: none;
+}
+
+@keyframes moveUp {
+    0% { transform: translateY(120%) translateX(-50%); opacity: 0; }
+    100% { transform: translateY(0) translateX(-50%); opacity: 1; }
+}
+.move-up {
+    animation: moveUp 0.25s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+}
+
+@keyframes moveDown {
+    0% { transform: translateY(0%) translateX(-50%);  opacity: 1; }
+    100% { transform: translateY(120%) translateX(-50%); opacity: 0; }
+}
+.move-down {
+    animation: moveDown 0.25s cubic-bezier(0.25, 0.1, 0.25, 1) backwards;
+}
+
+
+.object-info {
+    position: absolute;
+    width: 65%;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 25px;
+    position: absolute;
+    background-color: #333333aa;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px;
+}
+
+.object-title {
+    position: relative;
+    margin-top: 100px;
+    font-family: monospace;
+    font-size: 45px;
+    font-weight: bold;
+    color: #fefefeaa;
+    transform: translateX(-50%);
+}
+
+.object-description {
+    position: relative;
+    font-family: monospace;
+    font-size: 30px;
+    font-weight: bold;
+    color: #aaaaaaaa;
+    transform: translateX(-50%);
+}
